batchsite second commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <div class="bt-w-main">
         <!--菜单部分-->
         <div class="bt-w-menu">
-            <p class="bgw" onclick="batchsite.PAGE_INDEX()">导入文件选择地址</p>
+            <p class="bgw" onclick="batchsite.page_index()">导入文件选择地址</p>
             <p onclick="batchsite.page_site_delete()">已导入的列表</p>
             <p onclick="batchsite.page_site_config()">添加网站</p>
             <p onclick="batchsite.page_about()">关于</p>
