--- a/static/site_config.html
+++ b/static/site_config.html
@@ -8,79 +8,95 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="src/x-admin/css/font.css">
     <link rel="stylesheet" href="src/x-admin/css/xadmin.css">
-    <link rel="stylesheet" href="src/x-admin/lib/layui/css/layui.css">
+    <link rel="stylesheet" href="src/x-admin/lib/layui/css/layui.css" media="all">
     <script type="text/javascript" src="/static/js/jquery-1.10.2.min.js"></script>
     <script type="text/javascript" src="src/x-admin/lib/layui/layui.js"></script>
+    <script type="text/javascript" src="src/x-admin/lib/layui/layui.all.js"></script>
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
 </head>
 <body>
-<form class="layui-form" action="">
+<form class="layui-form">
     <div class="layui-form-item">
-        <label class="layui-form-label">输入框</label>
+        <label class="layui-form-label">根目录</label>
         <div class="layui-input-block">
-            <input type="text" name="title" required lay-verify="required" placeholder="请输入标题" autocomplete="off"
-                   class="layui-input">
+            <input type="text" name="" placeholder="请输入" autocomplete="off" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">密码框</label>
-        <div class="layui-input-inline">
-            <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off"
-                   class="layui-input">
-        </div>
-        <div class="layui-form-mid layui-word-aux">辅助文字</div>
-    </div>
-    <div class="layui-form-item">
-        <label class="layui-form-label">选择框</label>
+        <label class="layui-form-label">FTP</label>
         <div class="layui-input-block">
-            <select name="city" lay-verify="required">
-                <option value=""></option>
-                <option value="0">北京</option>
-                <option value="1">上海</option>
-                <option value="2">广州</option>
-                <option value="3">深圳</option>
-                <option value="4">杭州</option>
+            <select name="interest" lay-filter="aihao">
+                <option value="0">创建</option>
+                <option value="1">不创建</option>
             </select>
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">复选框</label>
+        <label class="layui-form-label">数据库</label>
         <div class="layui-input-block">
-            <input type="checkbox" name="like[write]" title="写作">
-            <input type="checkbox" name="like[read]" title="阅读" checked>
-            <input type="checkbox" name="like[dai]" title="发呆">
+            <select name="interest" lay-filter="aihao">
+                <option value="0">不创建</option>
+                <option value="1">MySQL</option>
+                <option value="1">SQLServer</option>
+            </select>
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">开关</label>
+        <label class="layui-form-label">FTP</label>
         <div class="layui-input-block">
-            <input type="checkbox" name="switch" lay-skin="switch">
+            <select name="interest" lay-filter="aihao">
+                <option value="0">创建</option>
+                <option value="1">不创建</option>
+            </select>
         </div>
     </div>
     <div class="layui-form-item">
-        <label class="layui-form-label">单选框</label>
+        <label class="layui-form-label">程序类型</label>
         <div class="layui-input-block">
-            <input type="radio" name="sex" value="男" title="男">
-            <input type="radio" name="sex" value="女" title="女" checked>
+            <select name="interest" lay-filter="aihao">
+                <option value="PHP">PHP</option>
+                <option value="Asp">Asp</option>
+                <option value="Aspx">Aspx</option>
+            </select>
         </div>
     </div>
-    <div class="layui-form-item layui-form-text">
-        <label class="layui-form-label">文本域</label>
+    <div class="layui-form-item">
+        <label class="layui-form-label">程序类型</label>
         <div class="layui-input-block">
-            <textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
+            <select name="interest" lay-filter="aihao">
+                <option value="54">PHP-54</option>
+                <option value="00">纯静态</option>
+            </select>
+        </div>
+    </div>
+    <div class="layui-form-item">
+        <label class="layui-form-label">单行选择框</label>
+        <div class="layui-input-block">
+            <select name="interest" lay-filter="aihao">
+                <option value=""></option>
+                <option value="0">写作</option>
+                <option value="1" selected="">阅读</option>
+                <option value="2">游戏</option>
+                <option value="3">音乐</option>
+                <option value="4">旅行</option>
+            </select>
         </div>
     </div>
     <div class="layui-form-item">
         <div class="layui-input-block">
-            <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+            <button class="layui-btn" lay-submit lay-filter="*">立即提交</button>
             <button type="reset" class="layui-btn layui-btn-primary">重置</button>
         </div>
     </div>
+    <!-- 更多表单结构排版请移步文档左侧【页面元素-表单】一项阅览 -->
 </form>
-</table>
 </body>
 <script>
+    layui.use('form', function(){
+  var form = layui.form; //只有执行了这一步，部分表单元素才会自动修饰成功
 
+  form.render();
+});    
 </script>
 </html>
