--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <!--菜单部分-->
         <div class="bt-w-menu">
             <p class="bgw" onclick="batchsite.page_index()">导入文件选择地址</p>
-            <p onclick="batchsite.page_site_delete()">已导入的列表</p>
+            <!-- <p onclick="batchsite.page_site_delete()">已导入的列表</p> -->
             <p onclick="batchsite.page_site_config()">添加网站</p>
             <p onclick="batchsite.page_about()">关于</p>
         </div>
@@ -25,7 +25,7 @@
                         border="0" marginwidth="0" marginheight="0" scrolling="yes" allowtransparency="yes"></iframe>
             </div>
             <div class="plugin_body" id="page_about" style="display: none">
-                <div id="About_logo" align="center"><img src="batchsite/icon.png" width="300px"></div>
+                <div id="About_logo" align="center"><img src="batchsite/static/src/img/icon.png" width="300px"></div>
                 <br/>
                 <div id="About_dev">
                     <table align="left" style="position:absolute; left:42%; top:75%;" border="0">
