--- a/static/site_list.html
+++ b/static/site_list.html
@@ -1,6 +1,7 @@
 <!-- 节点管理页面 -->
 <!DOCTYPE html>
 <html class="x-admin-sm">
+
 <head>
     <meta charset="UTF-8">
     <title>管理后台</title>
@@ -14,6 +15,7 @@
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
 </head>
+
 <body>
 <table class="layui-table">
     <div class="layui-fluid">
@@ -21,7 +23,8 @@
             <div class="layui-col-md12">
                 <div class="layui-card">
                     <div class="layui-card-header">
-                        <button class="layui-btn layui-btn-danger" onclick="saveSelect()"><i class="layui-icon"></i>批量添加
+                        <button class="layui-btn layui-btn-danger" onclick="saveSelect()"><i
+                                class="layui-icon"></i>批量添加
                         </button>
                         <button class="layui-btn" onclick="xadmin.open('添加HOST','host_add.html',500,300)"><i
                                 class="layui-icon"></i>添加
@@ -38,8 +41,6 @@
 </table>
 </body>
 <script>
-
-
     layui.config({
         version: '1583393622929' //为了更新 js 缓存，可忽略
     });
@@ -60,24 +61,43 @@
 
     layui.use('layer', function () {
         layer = layui.layer;
-        load = layer.msg('加载 batchsite_config 配置中...', {time: false});
+        load = layer.msg('加载 batchsite_config 配置中...', {
+            time: false
+        });
         get_domain_list();
     });
 
     function get_domain_list() {
         request_plugin("batchsite", "get_domain_list", "", function (rdata) {
             if (rdata["status"] == "Success") {
-                var tablehtml = ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th><th>二级域名</th> <th>操作</th></tr></thead><tbody>\n';
+                var tablehtml =
+                    ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th><th>二级域名</th> ' +
+                    // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
+                    '</tr></thead><tbody>\n';
                 for (var i = 0; i < rdata.data.length; i++) {
-                    domain_data = rdata.data[i].domain;
-                    second_domain_data = rdata.data[i].second_domain;
-                    tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' + domain_data + ',' + second_domain_data + '" class="' + second_domain_data + '"  lay-skin="primary"  >' +
+                    domain = rdata.data[i].domain;
+                    second_domain = rdata.data[i].second_domain;
+                    datauser = rdata.data[i].datauser;
+                    datapassword = rdata.data[i].datapassword;
+                    ftp_username = rdata.data[i].ftp_username;
+                    ftp_password = rdata.data[i].ftp_password;
+                    tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
+                        domain + ',' + second_domain + ',' + datauser + ',' + datapassword + ',' + ftp_username + ',' + ftp_password + '" class="' + second_domain +
+                        '"  lay-skin="primary"  >' +
                         "</td><td>" + (i + 1) +
-                        "</td><td>" + domain_data +
-                        "</td><td>" + second_domain_data +
-                        "</td><td>" + '<a title="编辑"  onclick="xadmin.open(\'编辑\',\'host_edit.html?domain=' + domain_data + '\',500,300)" href="javascript:;"><i class="layui-icon">&#xe642;</i> </a>'
-                        + '<a title="删除" onclick="member_del(1,\'' + domain_data + '\')" href="javascript:;"><i class="layui-icon">&#xe640;</i></a>' +
-                        "</td></tr>\n";
+                        "</td><td>" + domain +
+                        "</td><td>" + second_domain +
+                        // "</td><td>" + datauser +
+                        // "</td><td>" + datapassword +
+                        // "</td><td>" + ftp_username +
+                        // "</td><td>" + ftp_password +
+                        // "</td><td>" + '<a title="编辑"  onclick="xadmin.open(\'编辑\',\'host_edit.html?domain=' +
+                        // domain +
+                        // '\',500,300)" href="javascript:;"><i class="layui-icon">&#xe642;</i> </a>' +
+                        // '<a title="删除" onclick="member_del(1,\'' + domain +
+                        // '\')" href="javascript:;"><i class="layui-icon">&#xe640;</i></a>' +
+                        // "</td></tr>" +
+                        "\n";
                 }
                 $("#ServerListTable").html(tablehtml + "</tbody>");
                 layer.close(load);
@@ -96,7 +116,10 @@
                     data: "domain=" + host,
                     dataType: "JSON",
                     success: function (rdata) {
-                        layer.msg(rdata["msg"], {icon: 1, time: 3000});
+                        layer.msg(rdata["msg"], {
+                            icon: 1,
+                            time: 3000
+                        });
                         get_domain_list();
                     }
                 })
@@ -127,7 +150,10 @@
                 }
 
             }
-            layer.msg('批量删除成功!', {icon: 1, time: 3000});
+            layer.msg('批量删除成功!', {
+                icon: 1,
+                time: 3000
+            });
             get_domain_list();
 
         });
@@ -139,7 +165,7 @@
             num = checkbox.length;
             // var siteList = [];
             var siteList = new Array();
-            
+
             for (var i = 0; i < num; i++) {
                 dom = checkbox[i];
                 if (dom.checked) {
@@ -148,15 +174,27 @@
                     var arraydata = data.split(',')
                     site_obj.domain = arraydata[0];
                     site_obj.second_domain = arraydata[1];
+                    site_obj.datauser = arraydata[2];
+                    site_obj.datapassword = arraydata[3];
+                    site_obj.ftp_username = arraydata[4];
+                    site_obj.ftp_password = arraydata[5];
                     siteList.push(site_obj)
                 }
             }
-            console.log("before",siteList)
-            request_plugin("batchsite", "save_domain_list",{ "siteList" :JSON.stringify(siteList)}, function (rdata) {
-                layer.msg('批量添加成功! 共添加： ' + rdata.size +' 个', {icon: 1, time: 3000});
+            console.log("before", siteList)
+            request_plugin("batchsite", "save_domain_list", {
+                "siteList": JSON.stringify(siteList)
+            }, function (rdata) {
+                layer.msg('批量添加成功! 共添加： ' + rdata.size + ' 个', {
+                    icon: 1,
+                    time: 3000
+                });
             })
             // member_save(siteList); 
-            layer.msg('批量添加成功!', {icon: 1, time: 3000});
+            layer.msg('批量添加成功!', {
+                icon: 1,
+                time: 3000
+            });
             get_domain_list();
 
         });
@@ -166,13 +204,15 @@
         console.log(siteList)
         layer.confirm('确认要添加吗？', function (index) {
             request_plugin("batchsite", "save_domain_list", "", function (rdata) {
-                layer.msg('批量添加成功! 共添加： ' + rdata +' 个', {icon: 1, time: 3000});
-                console.log(rdata )
+                layer.msg('批量添加成功! 共添加： ' + rdata + ' 个', {
+                    icon: 1,
+                    time: 3000
+                });
+                console.log(rdata)
             })
         });
     }
 
     batchsite.get_domain_list();
-
 </script>
 </html>
