--- a/static/site_config.html
+++ b/static/site_config.html
@@ -1,10 +1,10 @@
-<!-- 节点管理页面 -->
+<!-- 添加网站配置页面 -->
 <!DOCTYPE html>
 <html class="x-admin-sm">
 
 <head>
     <meta charset="UTF-8"/>
-    <title>管理后台</title>
+    <title>添加网站</title>
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
     <link rel="stylesheet" href="src/x-admin/css/font.css"/>
@@ -16,19 +16,82 @@
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
     <style>
+        .x-admin-sm body{
+            background: #d2d2d200;
+        }
         .layui-input-block {
             width: 100px;
         }
-
         .bt-form {
             height: 100%;
             padding-bottom: 70px;
             padding: 20px;
         }
 
-        #form-item-click {
-            width: 300px;
-            left: 200px
+        .success-msg {
+            width: 100%;
+            padding: 30px 50px;
+            font-family: "Microsoft Yahei";
+            float: left;
+            position: relative
+        }
+
+        .success-msg .pic {
+            position: absolute;
+            top: 50%;
+            margin-top: -100px
+        }
+
+        .success-msg .pic img {
+            width: 158px
+        }
+
+        .success-msg .suc-con {
+            float: right;
+            width: 260px
+        }
+
+        .success-msg .suc-con h3 {
+            font-size: 16px;
+            margin-bottom: 15px
+        }
+
+        .success-msg .suc-con p {
+            line-height: 23px
+        }
+
+        .success-msg .suc-con .p1 {
+            border-bottom: 1px dashed #aaa;
+            color: #000;
+            height: 30px;
+            margin-bottom: 8px
+        }
+
+        .success-msg .bottom-btn {
+            margin-top: 60px;
+            width: 100%;
+            float: left
+        }
+
+        .success-msg .bottom-btn a {
+            width: 200px;
+            height: 40px;
+            line-height: 40px;
+            text-align: center;
+            display: inline-block;
+            border-radius: 5px;
+            margin-left: 30px;
+            color: #fff;
+            font-size: 16px;
+            cursor: pointer
+        }
+
+        .success-msg .bottom-btn .close-btn {
+            background-color: #cbcbcb
+        }
+
+        .success-msg .bottom-btn .blue-btn {
+            background-color: #5cb85c
         }
     </style>
 </head>
@@ -121,6 +184,10 @@
     form.on('submit(submit-commit)', function (data) {
         sdata = JSON.stringify(data.field)
         console.log(sdata);
+        layer = layui.layer;
+        load = layer.msg('批量建设站点中 请稍等...', {
+            time: false
+        });
         add_domain_list(sdata);
         return false
     });
@@ -128,10 +195,24 @@
     function add_domain_list(sdata) {
         request_plugin("batchsite", "add_domain_list", {'domain_info': sdata}, function (rdata) {
             if (rdata["status"] == "Success") {
-                // layer.msg('批量添加站点成功! 共添加： ' + rdata.size +' 个', {icon: 1, time: 3000});
-                layer.msg('批量添加站点成功! 共添加： ' + rdata.site + ' 个', {icon: 1, time: 3000});
+                layer.close(load);
+                layer.open({
+                    type: 1,
+                    title: "一键安装成功!",
+                    closeBtn: 1,
+                    anim: 2,
+                    area: ['650px', '300px'],
+                    content: '<div class="success-msg"><div class="pic"> <img src="/static/img/success-pic.png" style="width: 150px; margin-top: 30px;"></div>' +
+                        '<div class="suc-con">' +
+                        '<p class="p1">批量建站结果</p>' +
+                        '<p><span>共批量建站 ：</span><strong>' + rdata.site.count + '</strong></p><p>' +
+                        '<p><span>成功批量建站 ：</span><strong>' + rdata.site.successSize + '</strong></p>' +
+                        '<p><span>失败批量建站</span><strong>' + rdata.site.failureSize + '</strong></p>' +
+                        '<p style="margin-bottom: 19px; margin-top: 11px; color: #666"></p>' +
+                        '</div></div>'
+                })
             }
-        })
+        },2000000)
     }
 
     // 搜索当前的可用插件的安装包
