--- a/static/site_delete.html
+++ b/static/site_delete.html
@@ -1,9 +1,9 @@
-<!-- 节点管理页面 -->
+<!-- 删除页面页面 -->
 <!DOCTYPE html>
 <html class="x-admin-sm">
 <head>
     <meta charset="UTF-8">
-    <title>管理后台</title>
+    <title>删除列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="src/x-admin/css/font.css">
