--- a/static/site_list.html
+++ b/static/site_list.html
@@ -1,10 +1,10 @@
-<!-- 节点管理页面 -->
+<!-- 已导入列表页面 -->
 <!DOCTYPE html>
 <html class="x-admin-sm">
 
 <head>
     <meta charset="UTF-8">
-    <title>管理后台</title>
+    <title>已导入列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="src/x-admin/css/font.css">
@@ -14,6 +14,11 @@
     <script type="text/javascript" src="src/x-admin/lib/layui/layui.js"></script>
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
+    <style>
+        .x-admin-sm body {
+            background: #d2d2d200;
+        }
+    </style>
 </head>
 
 <body>
@@ -30,10 +35,8 @@
                                 class="layui-icon"></i>添加
                         </button>
                     </div>
-                    <div class="layui-card-body layui-table-body layui-table-main">
-                        <table class="layui-table layui-form" id="ServerListTable">
-                        </table>
-                    </div>
+                    <table class="layui-table layui-form" id="ServerListTable">
+                    </table>
                 </div>
             </div>
         </div>
