使用 ajax json 方式请求获取后端值

--- a/static/site_list.html
+++ b/static/site_list.html
@@ -28,6 +28,7 @@
             <div class="layui-col-md12">
                 <div class="layui-card">
                     <div class="layui-card-header">
+                        <button type="button" class="layui-btn" id="test3"><i class="layui-icon"></i>上传文件</button>
                         <button class="layui-btn layui-btn-danger" onclick="saveSelect()"><i
                                 class="layui-icon"></i>批量添加
                         </button>
@@ -108,7 +109,6 @@
             }
         })
     }
-
 
     function member_del(type, host) {
         if (type == 1) {
