--- a/static/site_config.html
+++ b/static/site_config.html
@@ -7,6 +7,7 @@
     <title>添加网站</title>
     <meta name="renderer" content="webkit"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <pre id="BTCO_BTTOKEN_REQUEST" style="display: none" co-token="{{ data['BTCO_BTTOKEN'] }}"></pre>
     <link rel="stylesheet" href="src/x-admin/css/font.css"/>
     <link rel="stylesheet" href="src/x-admin/css/xadmin.css"/>
     <link rel="stylesheet" href="src/x-admin/lib/layui/css/layui.css" media="all"/>
@@ -16,12 +17,14 @@
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
     <style>
-        .x-admin-sm body{
+        .x-admin-sm body {
             background: #d2d2d200;
         }
+
         .layui-input-block {
             width: 100px;
         }
+
         .bt-form {
             height: 100%;
             padding-bottom: 70px;
@@ -212,7 +215,7 @@
                         '</div></div>'
                 })
             }
-        },2000000)
+        }, 2000000)
     }
 
     // 搜索当前的可用插件的安装包
