--- a/static/site_list.html
+++ b/static/site_list.html
@@ -28,7 +28,7 @@
             <div class="layui-col-md12">
                 <div class="layui-card">
                     <div class="layui-card-header">
-                        <button type="button" class="layui-btn" id="test3"><i class="layui-icon"></i>上传文件</button>
+                        <button type="button" class="layui-btn" id="uploadTxt"><i class="layui-icon"> </i>上传文件</button>
                         <button class="layui-btn layui-btn-danger" onclick="saveSelect()"><i
                                 class="layui-icon"></i>批量添加
                         </button>
@@ -71,151 +71,170 @@
         get_domain_list();
     });
 
-    function get_domain_list() {
-        request_plugin("batchsite", "get_domain_list", "", function (rdata) {
-            if (rdata["status"] == "Success") {
-                var tablehtml =
-                    ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th><th>二级域名</th> ' +
-                    // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
-                    '</tr></thead><tbody>\n';
-                for (var i = 0; i < rdata.data.length; i++) {
-                    domain = rdata.data[i].domain;
-                    second_domain = rdata.data[i].second_domain;
-                    datauser = rdata.data[i].datauser;
-                    datapassword = rdata.data[i].datapassword;
-                    ftp_username = rdata.data[i].ftp_username;
-                    ftp_password = rdata.data[i].ftp_password;
-                    tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
-                        domain + ',' + second_domain + ',' + datauser + ',' + datapassword + ',' + ftp_username + ',' + ftp_password + '" class="' + second_domain +
-                        '"  lay-skin="primary"  >' +
-                        "</td><td>" + (i + 1) +
-                        "</td><td>" + domain +
-                        "</td><td>" + second_domain +
-                        // "</td><td>" + datauser +
-                        // "</td><td>" + datapassword +
-                        // "</td><td>" + ftp_username +
-                        // "</td><td>" + ftp_password +
-                        // "</td><td>" + '<a title="编辑"  onclick="xadmin.open(\'编辑\',\'host_edit.html?domain=' +
-                        // domain +
-                        // '\',500,300)" href="javascript:;"><i class="layui-icon">&#xe642;</i> </a>' +
-                        // '<a title="删除" onclick="member_del(1,\'' + domain +
-                        // '\')" href="javascript:;"><i class="layui-icon">&#xe640;</i></a>' +
-                        // "</td></tr>" +
-                        "\n";
-                }
-                $("#ServerListTable").html(tablehtml + "</tbody>");
-                layer.close(load);
-                form.render('checkbox');
-            }
-        })
-    }
+    layui.use('upload', function () {
+        var $ = layui.jquery
+            , upload = layui.upload;
 
-    function member_del(type, host) {
-        if (type == 1) {
-            layer.confirm('确认要删除吗？', function (index) {
+        //指定允许上传的文件类型
+        upload.render({
+            elem: '#uploadTxt'
+            , url: '/batchsite/upload_domain_excel.json'
+            , method: 'POST'  //可选项。HTTP类型，默认post
+            , accept: 'file'
+            , done:
+                function (res) {
+                    layer.msg('上传成功');
+                    console.log(res);
+                }
+        })
+        ;
+    });
+
+        function get_domain_list() {
+            request_plugin("batchsite", "get_domain_list", "", function (rdata) {
+                if (rdata["status"] == "Success") {
+                    var tablehtml =
+                        ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th><th>二级域名</th> ' +
+                        // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
+                        '</tr></thead><tbody>\n';
+                    for (var i = 0; i < rdata.data.length; i++) {
+                        domain = rdata.data[i].domain;
+                        second_domain = rdata.data[i].second_domain;
+                        datauser = rdata.data[i].datauser;
+                        datapassword = rdata.data[i].datapassword;
+                        ftp_username = rdata.data[i].ftp_username;
+                        ftp_password = rdata.data[i].ftp_password;
+                        tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
+                            domain + ',' + second_domain + ',' + datauser + ',' + datapassword + ',' + ftp_username + ',' + ftp_password + '" class="' + second_domain +
+                            '"  lay-skin="primary"  >' +
+                            "</td><td>" + (i + 1) +
+                            "</td><td>" + domain +
+                            "</td><td>" + second_domain +
+                            // "</td><td>" + datauser +
+                            // "</td><td>" + datapassword +
+                            // "</td><td>" + ftp_username +
+                            // "</td><td>" + ftp_password +
+                            // "</td><td>" + '<a title="编辑"  onclick="xadmin.open(\'编辑\',\'host_edit.html?domain=' +
+                            // domain +
+                            // '\',500,300)" href="javascript:;"><i class="layui-icon">&#xe642;</i> </a>' +
+                            // '<a title="删除" onclick="member_del(1,\'' + domain +
+                            // '\')" href="javascript:;"><i class="layui-icon">&#xe640;</i></a>' +
+                            // "</td></tr>" +
+                            "\n";
+                    }
+                    $("#ServerListTable").html(tablehtml + "</tbody>");
+                    layer.close(load);
+                    form.render('checkbox');
+                }
+            })
+        }
+
+        function member_del(type, host) {
+            if (type == 1) {
+                layer.confirm('确认要删除吗？', function (index) {
+                    $.ajax({
+                        url: "/batchsite/DelDomainConfig.json",
+                        type: "POST",
+                        data: "domain=" + host,
+                        dataType: "JSON",
+                        success: function (rdata) {
+                            layer.msg(rdata["msg"], {
+                                icon: 1,
+                                time: 3000
+                            });
+                            get_domain_list();
+                        }
+                    })
+                });
+            } else {
                 $.ajax({
                     url: "/batchsite/DelDomainConfig.json",
                     type: "POST",
                     data: "domain=" + host,
                     dataType: "JSON",
                     success: function (rdata) {
-                        layer.msg(rdata["msg"], {
-                            icon: 1,
-                            time: 3000
-                        });
-                        get_domain_list();
+                        console.log(rdata["msg"]);
                     }
-                })
-            });
-        } else {
-            $.ajax({
-                url: "/batchsite/DelDomainConfig.json",
-                type: "POST",
-                data: "domain=" + host,
-                dataType: "JSON",
-                success: function (rdata) {
-                    console.log(rdata["msg"]);
+                });
+            }
+        }
+
+
+        function delSelect() {
+            layer.confirm('确认要删除这些记录吗？', function (index) {
+                checkbox = $("[name='SiteList']");
+                num = checkbox.length;
+                for (var i = 0; i < num; i++) {
+                    dom = checkbox[i];
+                    if (dom.checked) {
+                        host = dom.value;
+                        member_del(0, host);
+                    }
+
                 }
+                layer.msg('批量删除成功!', {
+                    icon: 1,
+                    time: 3000
+                });
+                get_domain_list();
+
             });
         }
-    }
 
+        function saveSelect() {
+            layer.confirm('确认要保存这些记录吗？', function (index) {
+                checkbox = $("[name='SiteList']");
+                num = checkbox.length;
+                // var siteList = [];
+                var siteList = new Array();
 
-    function delSelect() {
-        layer.confirm('确认要删除这些记录吗？', function (index) {
-            checkbox = $("[name='SiteList']");
-            num = checkbox.length;
-            for (var i = 0; i < num; i++) {
-                dom = checkbox[i];
-                if (dom.checked) {
-                    host = dom.value;
-                    member_del(0, host);
+                for (var i = 0; i < num; i++) {
+                    dom = checkbox[i];
+                    if (dom.checked) {
+                        var site_obj = {};
+                        data = dom.value
+                        var arraydata = data.split(',')
+                        site_obj.domain = arraydata[0];
+                        site_obj.second_domain = arraydata[1];
+                        site_obj.datauser = arraydata[2];
+                        site_obj.datapassword = arraydata[3];
+                        site_obj.ftp_username = arraydata[4];
+                        site_obj.ftp_password = arraydata[5];
+                        siteList.push(site_obj)
+                    }
                 }
-
-            }
-            layer.msg('批量删除成功!', {
-                icon: 1,
-                time: 3000
-            });
-            get_domain_list();
-
-        });
-    }
-
-    function saveSelect() {
-        layer.confirm('确认要保存这些记录吗？', function (index) {
-            checkbox = $("[name='SiteList']");
-            num = checkbox.length;
-            // var siteList = [];
-            var siteList = new Array();
-
-            for (var i = 0; i < num; i++) {
-                dom = checkbox[i];
-                if (dom.checked) {
-                    var site_obj = {};
-                    data = dom.value
-                    var arraydata = data.split(',')
-                    site_obj.domain = arraydata[0];
-                    site_obj.second_domain = arraydata[1];
-                    site_obj.datauser = arraydata[2];
-                    site_obj.datapassword = arraydata[3];
-                    site_obj.ftp_username = arraydata[4];
-                    site_obj.ftp_password = arraydata[5];
-                    siteList.push(site_obj)
-                }
-            }
-            console.log("before", siteList)
-            request_plugin("batchsite", "save_domain_list", {
-                "siteList": JSON.stringify(siteList)
-            }, function (rdata) {
-                layer.msg('批量添加成功! 共添加： ' + rdata.size + ' 个', {
+                console.log("before", siteList)
+                request_plugin("batchsite", "save_domain_list", {
+                    "siteList": JSON.stringify(siteList)
+                }, function (rdata) {
+                    layer.msg('批量添加成功! 共添加： ' + rdata.size + ' 个', {
+                        icon: 1,
+                        time: 3000
+                    });
+                })
+                // member_save(siteList);
+                layer.msg('批量添加成功!', {
                     icon: 1,
                     time: 3000
                 });
-            })
-            // member_save(siteList); 
-            layer.msg('批量添加成功!', {
-                icon: 1,
-                time: 3000
+                get_domain_list();
+
             });
-            get_domain_list();
+        }
 
-        });
-    }
+        function member_save(siteList) {
+            console.log(siteList)
+            layer.confirm('确认要添加吗？', function (index) {
+                request_plugin("batchsite", "save_domain_list", "", function (rdata) {
+                    layer.msg('批量添加成功! 共添加： ' + rdata + ' 个', {
+                        icon: 1,
+                        time: 3000
+                    });
+                    console.log(rdata)
+                })
+            });
+        }
 
-    function member_save(siteList) {
-        console.log(siteList)
-        layer.confirm('确认要添加吗？', function (index) {
-            request_plugin("batchsite", "save_domain_list", "", function (rdata) {
-                layer.msg('批量添加成功! 共添加： ' + rdata + ' 个', {
-                    icon: 1,
-                    time: 3000
-                });
-                console.log(rdata)
-            })
-        });
-    }
 
-    batchsite.get_domain_list();
 </script>
 </html>
