--- a/static/site_config.html
+++ b/static/site_config.html
@@ -164,6 +164,7 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-input-block" name="form-item-click" style="width:300px; left: 250px">
+                <button type="button" class="layui-btn" id="uploadZip"><i class="layui-icon"> </i>上传应用Zip</button>
                 <button type="submit" class="layui-btn" lay-submit="" lay-filter="submit-commit">立即提交</button>
             </div>
         </div>
@@ -182,6 +183,25 @@
         OptionCodeList();
     });
     form.render();
+
+    layui.use('upload', function () {
+        var $ = layui.jquery
+            , upload = layui.upload;
+
+        //指定允许上传的文件类型
+        layer.msg('上传成功');
+        upload.render({
+            elem: '#uploadZip'
+            , url: '/batchsite/upload_zip.json'
+            , method: 'POST'  //可选项。HTTP类型，默认post
+            , accept: 'file'
+            , done:
+                function (res) {
+                    layer.msg('上传成功');
+                    console.log(res);
+                }
+        });
+    });
 
     //监听提交
     form.on('submit(submit-commit)', function (data) {
