--- a/static/site_list.html
+++ b/static/site_list.html
@@ -69,6 +69,7 @@
         load = layer.msg('加载 batchsite_config 配置中...', {
             time: false
         });
+        batchsite.get_bt_token();
         get_domain_list();
     });
 
