--- a/static/site_delete.html
+++ b/static/site_delete.html
@@ -1,9 +1,10 @@
-<!-- 删除页面页面 -->
+<!-- 已导入列表页面 -->
 <!DOCTYPE html>
 <html class="x-admin-sm">
+
 <head>
     <meta charset="UTF-8">
-    <title>删除列表</title>
+    <title>已导入列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <link rel="stylesheet" href="src/x-admin/css/font.css">
@@ -13,75 +14,191 @@
     <script type="text/javascript" src="src/x-admin/lib/layui/layui.js"></script>
     <script type="text/javascript" src="src/x-admin/js/xadmin.js"></script>
     <script type="text/javascript" src="src/x-admin/js/batchsite.js"></script>
+    <style>
+        .x-admin-sm body {
+            background: #d2d2d200;
+        }
+
+    </style>
 </head>
+
 <body>
-<table class="layui-table">
-    <div class="layui-fluid">
-        <div class="layui-row layui-col-space15">
-            <div class="layui-col-md12">
-                <div class="layui-card">
-                    <div class="layui-card-header">
-                        <button class="layui-btn layui-btn-danger" onclick="saveSelect()"><i class="layui-icon"></i>批量添加
-                        </button>
-                        <button class="layui-btn" onclick="xadmin.open('添加HOST','host_add.html',500,300)"><i
-                                class="layui-icon"></i>添加
-                        </button>
-                    </div>
-                    <div class="layui-card-body layui-table-body layui-table-main">
+<form class="layui-form">
+    <table class="layui-table">
+        <div class="layui-fluid">
+            <div class="layui-row layui-col-space15">
+                <div class="layui-col-md12">
+                    <div class="layui-card">
+                        <div class="layui-card-header">
+                            <button type="submit" class="layui-btn" lay-submit="" lay-filter="submit-commit">
+                                下载所有站点
+                            </button>
+                            <button type="button" class="layui-btn" id="uploadExcel"><i class="layui-icon"> </i>上传Excle
+                            </button>
+                            <button class="layui-btn layui-btn-danger" onclick="saveSelect()">批量删除
+                            </button>
+                            <!--                            <div class="layui-inline">-->
+                            <!--                                <label class="layui-btn" name="oder">排序</label>-->
+                            <!--                                <div class="layui-input-inline" style="width: 80px;">-->
+                            <!--                                    <select name="order" style="">-->
+                            <!--                                        <option value="asc">升序</option>-->
+                            <!--                                        <option value="desc">降序</option>-->
+                            <!--                                    </select>-->
+                            <!--                                </div>-->
+                            <!--                            </div>-->
+                            <!--                            <div class="layui-inline">-->
+                            <!--                                <label class="layui-btn">站点数量</label>-->
+                            <!--                                <div class="layui-input-inline">-->
+                            <!--                                    <input value="100" type="tel" name="limit"-->
+                            <!--                                           class="layui-input" style="width: 50px">-->
+                            <!--                                </div>-->
+                            <!--                            </div>&nbsp;&nbsp;&nbsp;&nbsp;-->
+
+
+                        </div>
                         <table class="layui-table layui-form" id="ServerListTable">
                         </table>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</table>
+    </table>
+</form>
 </body>
 <script>
+    layui.config({
+        version: '1583393622929' //为了更新 js 缓存，可忽略
+    });
 
-    batchsite.get_domain_list();
+    function GetFileBytes(fileName, fileSize) {
+        window.open('/download?filename=' + encodeURIComponent(fileName));
+    }
+
+    function downloadExcle() {
+        request_plugin("batchsite", "getBtData", {"data": sdata}, function (rdata) {
+            if (rdata["status"] == "success") {
+                GetFileBytes(rdata["path"])
+                layer.close(load);
+                form.render('checkbox');
+            } else if (rdata["status"] == "false") {
+                layer.close(load);
+                layer.msg(rdata["msg"]);
+            }
+        });
+    }
 
     var load;
     var layer;
 
-    layui.use('form', function () {
-        form = layui.form;
+    layui.use('upload', function () {
+        var $ = layui.jquery
+            , upload = layui.upload;
 
-        // 监听全选
-        form.on('checkbox(checkall)', function (data) {
-            if (data.elem.checked) $('tbody input').prop('checked', true);
-            else $('tbody input').prop('checked', false);
-            form.render('checkbox');
+        //指定允许上传的文件类型
+        upload.render({
+            elem: '#uploadExcel'
+            , url: '/batchsite/upload_del_domain_excel.json'
+            , method: 'POST'  //可选项。HTTP类型，默认post
+            , accept: 'file'
+            , done:
+                function (res) {
+                    layer.msg('上传成功');
+                    // get_del_domain_list();
+                    console.log(res);
+                }
         });
     });
 
-    layui.use('layer', function () {
-        layer = layui.layer;
-        load = layer.msg('加载 batchsite_config 配置中...', {time: false});
-        get_domain_list();
+
+    layui.use('form', function () {
+        form = layui.form;
+
+        //监听提交
+        form.on('submit(submit-commit)', function (data) {
+            sdata = JSON.stringify(data.field)
+            console.log(sdata);
+            layer = layui.layer;
+            load = layer.msg('正在获取宝塔站点 请稍等...', {
+                time: false
+            });
+            downloadExcle()
+            // get_bt_domain_list(sdata);
+            return false
+        });
     });
 
-    function get_domain_list() {
-        request_plugin("batchsite", "get_domain_list", "", function (rdata) {
-            if (rdata["status"] == "Success") {
-                var tablehtml = ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th><th>二级域名</th> <th>操作</th></tr></thead><tbody>\n';
-                for (var i = 0; i < rdata.data.length; i++) {
-                    domain_data = rdata.data[i].domain;
-                    second_domain_data = rdata.data[i].second_domain;
-                    tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList"  value="' + domain_data,second_domain_data + '" lay-skin="primary"  >' +
-                        "</td><td>" + (i + 1) +
-                        "</td><td>" + domain_data +
-                        "</td><td>" + second_domain_data +
-                        "</td><td>" + '<a title="编辑"  onclick="xadmin.open(\'编辑\',\'host_edit.html?domain=' + domain_data + '\',500,300)" href="javascript:;"><i class="layui-icon">&#xe642;</i> </a>'
-                        + '<a title="删除" onclick="member_del(1,\'' + domain_data + '\')" href="javascript:;"><i class="layui-icon">&#xe640;</i></a>' +
-                        "</td></tr>\n";
+    /*    layui.use('upload', function () {
+            var $ = layui.jquery
+                , upload = layui.upload;
+
+            //指定允许上传的文件类型
+            upload.render({
+                elem: '#uploadTxt'
+                , url: '/batchsite/upload_domain_excel.json'
+                , method: 'POST'  //可选项。HTTP类型，默认post
+                , accept: 'file'
+                , done:
+                    function (res) {
+                        layer.msg('上传成功');
+                        get_domain_list();
+                        console.log(res);
+                    }
+            });
+        });*/
+
+    function get_del_domain_list(sdata) {
+        request_plugin("batchsite", "getBtData", {"data": sdata}, function (rdata) {
+            if (rdata["status"] == "success") {
+                var tablehtml =
+                    ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th>' +
+                    // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
+                    '</tr></thead><tbody>\n';
+                for (var i = 0; i < rdata.data.data.length; i++) {
+                    id = rdata.data.data[i].id;
+                    domain = rdata.data.data[i].name;
+                    tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
+                        id + ',' + domain +
+                        '"  lay-skin="primary"  >' +
+                        "</td><td>" + id +
+                        "</td><td>" + domain +
+                        "\n";
                 }
                 $("#ServerListTable").html(tablehtml + "</tbody>");
                 layer.close(load);
                 form.render('checkbox');
+            } else if (rdata["status"] == "false") {
+                layer.close(load);
+                layer.msg(rdata["msg"]);
             }
         })
     }
+
+    /*    function get_bt_domain_list(sdata) {
+            request_plugin("batchsite", "getBtData", {"data": sdata}, function (rdata) {
+                if (rdata["status"] == "success") {
+                    var tablehtml =
+                        ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th>' +
+                        // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
+                        '</tr></thead><tbody>\n';
+                    for (var i = 0; i < rdata.data.data.length; i++) {
+                        id = rdata.data.data[i].id;
+                        domain = rdata.data.data[i].name;
+                        tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
+                            id + ',' + domain +
+                            '"  lay-skin="primary"  >' +
+                            "</td><td>" + id +
+                            "</td><td>" + domain +
+                            "\n";
+                    }
+                    $("#ServerListTable").html(tablehtml + "</tbody>");
+                    layer.close(load);
+                    form.render('checkbox');
+                } else if (rdata["status"] == "false") {
+                    layer.close(load);
+                    layer.msg(rdata["msg"]);
+                }
+            })
+        }*/
 
     function member_del(type, host) {
         if (type == 1) {
@@ -92,7 +209,10 @@
                     data: "domain=" + host,
                     dataType: "JSON",
                     success: function (rdata) {
-                        layer.msg(rdata["msg"], {icon: 1, time: 3000});
+                        layer.msg(rdata["msg"], {
+                            icon: 1,
+                            time: 3000
+                        });
                         get_domain_list();
                     }
                 })
@@ -106,10 +226,10 @@
                 success: function (rdata) {
                     console.log(rdata["msg"]);
                 }
-
             });
         }
     }
+
 
     function delSelect() {
         layer.confirm('确认要删除这些记录吗？', function (index) {
@@ -119,12 +239,14 @@
                 dom = checkbox[i];
                 if (dom.checked) {
                     host = dom.value;
-
                     member_del(0, host);
                 }
 
             }
-            layer.msg('批量删除成功!', {icon: 1, time: 3000});
+            layer.msg('批量删除成功!', {
+                icon: 1,
+                time: 3000
+            });
             get_domain_list();
 
         });
@@ -134,28 +256,56 @@
         layer.confirm('确认要保存这些记录吗？', function (index) {
             checkbox = $("[name='SiteList']");
             num = checkbox.length;
-            var siteList = [];
+            // var siteList = [];
+            var siteList = new Array();
+
             for (var i = 0; i < num; i++) {
                 dom = checkbox[i];
                 if (dom.checked) {
-                    domain_data = dom.domain_data;
-                    second_domain_data = dom.second_domain_data
-                    // member_save(0, domain_data, second_domain_data);
-                    console.log(dom.domain_data)
+                    var site_obj = {};
+                    data = dom.value
+                    var arraydata = data.split(',')
+                    site_obj.domain = arraydata[0];
+                    site_obj.second_domain = arraydata[1];
+                    site_obj.datauser = arraydata[2];
+                    site_obj.datapassword = arraydata[3];
+                    site_obj.ftp_username = arraydata[4];
+                    site_obj.ftp_password = arraydata[5];
+                    siteList.push(site_obj)
                 }
             }
-            layer.msg('批量删除成功!', {icon: 1, time: 3000});
+            console.log("before", siteList)
+            request_plugin("batchsite", "save_domain_list", {
+                "siteList": JSON.stringify(siteList)
+            }, function (rdata) {
+                layer.msg('批量添加成功! 共添加： ' + rdata.size + ' 个', {
+                    icon: 1,
+                    time: 3000
+                });
+            })
+            // member_save(siteList);
+            layer.msg('批量添加成功!', {
+                icon: 1,
+                time: 3000
+            });
             get_domain_list();
 
         });
     }
 
-    function member_save(type, domain, second_domain) {
-        layer.confirm('确认要删除吗？', function (index) {
+    function member_save(siteList) {
+        console.log(siteList)
+        layer.confirm('确认要添加吗？', function (index) {
             request_plugin("batchsite", "save_domain_list", "", function (rdata) {
-
+                layer.msg('批量添加成功! 共添加： ' + rdata + ' 个', {
+                    icon: 1,
+                    time: 3000
+                });
+                console.log(rdata)
             })
         });
     }
+
+
 </script>
 </html>
