--- a/static/site_delete.html
+++ b/static/site_delete.html
@@ -103,7 +103,7 @@
             , done:
                 function (res) {
                     layer.msg('上传成功');
-                    // get_del_domain_list();
+                    get_del_domain_list();
                     console.log(res);
                 }
         });
@@ -146,16 +146,16 @@
             });
         });*/
 
-    function get_del_domain_list(sdata) {
-        request_plugin("batchsite", "getBtData", {"data": sdata}, function (rdata) {
+    function get_del_domain_list() {
+        request_plugin("batchsite", "get_del_domain_list", "", function (rdata) {
             if (rdata["status"] == "success") {
                 var tablehtml =
                     ' <thead><tr><th><input type="checkbox"  lay-filter="checkall" name="" lay-skin="primary" onclick="SelectAll()"></th><th>ID</th><th>域名</th></th>' +
                     // '<th>数据库账号</th><th>数据库密码</th> <th>ftp账号</th><th>ftp密码</th><th>操作</th>' +
                     '</tr></thead><tbody>\n';
-                for (var i = 0; i < rdata.data.data.length; i++) {
-                    id = rdata.data.data[i].id;
-                    domain = rdata.data.data[i].name;
+                for (var i = 0; i < rdata.data.length; i++) {
+                    id = rdata.data[i].id;
+                    domain = rdata.data[i].name;
                     tablehtml = tablehtml + "<tr><td>" + '<input type="checkbox" name="SiteList" value="' +
                         id + ',' + domain +
                         '"  lay-skin="primary"  >' +
